# git-history-analysis

./: .gitignore  .travis.yml  404.html  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  gla_output.json  index.html  make_venv.sh  mkdocs.yml  objects.inv  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  unit_test.yml
api/: index.html
docs/: Makefile  api.md  conf.py  index.md  index.rst  installation.rst  make.bat  usage.rst
git_log_analysis/: __init__.py  cli.py  git_log_analysis.py  git_log_analyzer.py  plot_histogram.py
git_log_analysis/utils/: argument_parser.py  file_system.py  multi_module_logging.py
search/: search_index.json
tests/: __init__.py  test_git_log_analysis.py
tests/utils/: test_file_system.py  test_multi_module_logging.py
