[metadata]
name = git-log-analysis
version = 0.1.0
description = Getting and sorting the git commit frequency by files.
long_description = file: README.md
long_description_content_type = text/markdown
author = geongu.park
author_email = ggus.park@gmail.com
license = MIT
license_file = LICENSE
platforms = ubuntu
classifiers =
    License :: OSI Approved
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Operating System :: POSIX

[options]
packages = git_log_analysis, git_log_analysis.utils
python_requires = >=3.6
zip_safe = no

[options.entry_points]
console_scripts =
    gla=git_log_analysis.cli:main

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:git_log_analysis/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
[tool:pytest]
collect_ignore = ['setup.py']
